// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/TooltipBase/Arrow should renders correctly bottom center 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderStyle": "solid",
        "height": 0,
        "position": "absolute",
        "width": 0,
      },
      {
        "width": 20,
      },
      {
        "borderBottomColor": "transparent",
        "borderBottomWidth": 0,
        "borderLeftColor": "transparent",
        "borderLeftWidth": 8,
        "borderRightColor": "transparent",
        "borderRightWidth": 8,
        "borderTopColor": "#20242D",
        "borderTopWidth": 8,
        "bottom": -8,
      },
      {
        "alignSelf": "center",
      },
    ]
  }
/>
`;

exports[`@lad-tech/mobydick-core/TooltipBase/Arrow should renders correctly bottom end 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderStyle": "solid",
        "height": 0,
        "position": "absolute",
        "width": 0,
      },
      undefined,
      {
        "borderBottomColor": "transparent",
        "borderBottomWidth": 0,
        "borderLeftColor": "transparent",
        "borderLeftWidth": 8,
        "borderRightColor": "transparent",
        "borderRightWidth": 8,
        "borderTopColor": "#20242D",
        "borderTopWidth": 8,
        "bottom": -8,
      },
      {
        "right": 10,
      },
    ]
  }
/>
`;

exports[`@lad-tech/mobydick-core/TooltipBase/Arrow should renders correctly top start 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderStyle": "solid",
        "height": 0,
        "position": "absolute",
        "width": 0,
      },
      {
        "width": 20,
      },
      {
        "borderBottomColor": "#20242D",
        "borderBottomWidth": 8,
        "borderLeftColor": "transparent",
        "borderLeftWidth": 8,
        "borderRightColor": "transparent",
        "borderRightWidth": 8,
        "borderTopColor": "transparent",
        "borderTopWidth": 0,
        "top": -8,
      },
      {
        "left": 10,
      },
    ]
  }
/>
`;
